--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src='a.js'></script>
 </head>
 <body>
-        <form action='#' method='post'>
             <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="dia" name="dia" min="1" max="31">
@@ -21,8 +20,8 @@
             </div>
             <div class="mode">
                 <h2>MODO:</h2>
-            <input type="button" id="light" value="light">
-            <input type="button" id="dark" value="dark">
+            <button onclick="darkMode()">Darkmode</button>
+            <button onclick="lightMode()">LightMode</button>
             </div>
             </div>
 </body>
