--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <input type="number" id="dia" name="dia" min="1" max="31">
             <label for="mes">MÊS DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="mes" name="mes" min="1" max="12">
-            <button>Somar</button>
+            <button>revelar</button>
             <div class="resultado">
-                <h1>resultado</h1>
+                <h1>musica</h1>
             </div>
             <div class="mode">
                 <h2>MODO:</h2>
