--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>jaja</title>
-    <script src='a.js'></script>
 </head>
 <body>
             <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="dia" name="dia" min="1" max="31">
+            <br>
             <label for="mes">MÊS DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="mes" name="mes" min="1" max="12">
+            <br>
             <button>revelar</button>
+            <br>
             <div class="resultado">
                 <h1>musica</h1>
             </div>
-            <div class="mode">
-                <h2>MODO:</h2>
-            <button onclick="darkMode()">Darkmode</button>
-            <button onclick="lightMode()">LightMode</button>
+            <br>
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="label" for="chk">
+              <i class="fas fa-moon"></i>
+              <i class="fas fa-sun"></i>
+              <div class="ball"></div>
             </div>
-            </div>
+        <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
+        <script src='a.js'></script>
 </body>
 </html>
