--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
             <input type="number" id="dia" name="dia" min="1" max="31">
             <br>
             <label for="mes">MÊS DO SEU ANIVERSÁRIO:</label>
-            <input type="number" id="mes" name="mes" min="1" max="12">
+            <select id="mes">
+                <option value="1">JANEIRO</option>
+                <option value="2">FEVEREIRO</option>
+                <option value="3">MARÇO</option>
+                <option value="4">ABRIL</option>
+                <option value="5">MAIO</option>
+                <option value="6">JUNHO</option>
+                <option value="7">JULHO</option>
+                <option value="8">AGOSTO</option>
+                <option value="9">SETEMBRO</option>
+                <option value="10">OUTUBRO</option>
+                <option value="11">NOVEMBRO</option>
+                <option value="12">DEZEMBRO</option>
+            </select>
             <br>
-            <button>revelar</button>
+            <input type="button" id="revela" value="revelar">
             <br>
             <div class="resultado">
-                <h1>musica</h1>
+                <label id=musica for="musica">musica</label>
             </div>
             <br>
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
+            <input type="checkbox" class="checkbox" id="mode" />
+            <label class="label" for="mode">
               <i class="fas fa-moon"></i>
               <i class="fas fa-sun"></i>
               <div class="ball"></div>
