--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>jaja</title>
+    <link rel="shortcut icon" href="https://d33wubrfki0l68.cloudfront.net/4562d851501b5112e6dd2a3504e00d0e0dc7a8dc/61e14/images/rhcp_neon-logo.png">
+    <title>musicaRHCP</title>
 </head>
 <body>
-            <div class="container">
+    <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?</header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Logo-red-hot-chili-peppers.png" alt="RHCPLOGO">    
+        <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="dia" name="dia" min="1" max="31">
             <br>
@@ -28,7 +31,7 @@
                 <option value="12">DEZEMBRO</option>
             </select>
             <br>
-            <input type="button" id="revela" value="revelar">
+            <input class="revela" type="button" id="revela" value="revelar">
             <br>
             <div class="resultado">
                 <label id=musica for="musica">musica</label>
@@ -40,6 +43,8 @@
               <i class="fas fa-sun"></i>
               <div class="ball"></div>
             </div>
+            <footer>Desenvolvido por: Jean Lucas Hoffelder, 3º ano do Técnico em Informática Integrado ao Ensino Médio do IFRS Feliz.
+            </footer>
         <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
         <script src='a.js'></script>
 </body>
