--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>musicaRHCP</title>
 </head>
 <body>
-    <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?</header>
+    <div class="geral">
+        <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?</header>
+        <main>
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Logo-red-hot-chili-peppers.png" alt="RHCPLOGO">    
         <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
@@ -43,8 +45,10 @@
               <i class="fas fa-sun"></i>
               <div class="ball"></div>
             </div>
+            </main>
             <footer>Desenvolvido por: Jean Lucas Hoffelder, 3º ano do Técnico em Informática Integrado ao Ensino Médio do IFRS Feliz.
             </footer>
+        </div>
 </body>
 <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 <script src='a.js'></script>
