--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>musicaRHCP</title>
 </head>
 <body>
-    <div class="geral">
-        <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?</header>
-        <main>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Logo-red-hot-chili-peppers.png" alt="RHCPLOGO">    
+    <div>
+    <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Logo-red-hot-chili-peppers.png" alt="RHCPLOGO">   
+    </header> 
         <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
             <input type="number" id="dia" name="dia" min="1" max="31">
@@ -36,7 +36,7 @@
             <input class="revela" type="button" id="revela" value="revelar">
             <br>
             <div class="resultado">
-                <label id=musica for="musica">musica</label>
+                <label id=musica for="musica">MUSICA</label>
             </div>
             <br>
             <input type="checkbox" class="checkbox" id="mode" />
@@ -45,10 +45,9 @@
               <i class="fas fa-sun"></i>
               <div class="ball"></div>
             </div>
-            </main>
-            <footer>Desenvolvido por: Jean Lucas Hoffelder, 3º ano do Técnico em Informática Integrado ao Ensino Médio do IFRS Feliz.
+            </div>
+            <footer>Desenvolvido por: Jean Lucas Hoffelder, 3º ano do Técnico em Informática Integrado ao Ensino Médio do IFRS Campus Feliz.
             </footer>
-        </div>
 </body>
 <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 <script src='a.js'></script>
