--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <br>
             <div class="resultado">
                 <label id=musica for="musica">MUSICA</label>
+                <p class="link" id="link"></p>
             </div>
             <br>
             <input type="checkbox" class="checkbox" id="mode" />
