--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
     <header>QUAL A SUA MÚSICA DO RED HOT CHILI PEPPERS?
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Logo-red-hot-chili-peppers.png" alt="RHCPLOGO">   
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/RHCP_Logo.svg/1038px-RHCP_Logo.svg.png" alt="RHCPLOGO">   
     </header> 
         <div class="container">
             <label for="dia">DIA DO SEU ANIVERSÁRIO:</label>
